# Mathlogic

./: CMakeLists.txt  HW1.cpp  HW3.cpp  HW4.cpp  ProofChecker.cpp  ProofChecker.h  ProofDeduction.cpp  ProofDeduction.h  Utils.cpp  Utils.h  main.cpp
cpp (fails)/: CMakeCache.txt  CMakeLists.txt  HW2.cpp  Makefile  ProofChecker.cpp  ProofDeduction.cpp  README.md  cmake_install.cmake  main.cpp
cpp (fails)/expressions/: And.cpp  ExistsQuantifier.cpp  Multiply.cpp  Or.cpp  Parser.h  ParserFormalArithmetic.cpp  Variable.cpp
cpp (fails)/tests/: 01.in  02.out
expressions/: Add.cpp  Equality.cpp  Expressions.cpp  Expressions.h  ForallQuantifier.cpp  Implication.cpp  Not.cpp  Parser.cpp  ParserFormalArithmetic.cpp  ParserFormalArithmetic.h  Predicate.cpp
generators/: 01_big_generator.py
java/Task1/: input.txt  output.txt
java/Task1/src/: AbstractBinaryOperation.java  And.java  Expression.java  ExpressionParser.java  Implication.java  Main.java  Negate.java  Or.java  Symbol.java
java/Task2/: output.txt
java/Task2/src/: AbstractBinaryOperation.java  And.java  Expression.java  Implication.java  Main.java  Negate.java  Or.java  Symbol.java
java/Task3/: axioms.txt  bundleProofs.txt  contrapositionProof.txt  exclusionOfThirdProof.txt  output.txt
java/Task3/src/: AbstractBinaryOperation.java  Conjunction.java  Disjunction.java  Expression.java  ExpressionParser.java  Implication.java  Main.java  Negate.java  Symbol.java  (+1 more)
java/Task4/: atoAProof.txt  input.txt  output.txt
java/Task7/: output.txt
java/Task8/: input.txt  output.txt
tests/: 03.out  04.out
(+72 files in other folders)
